--- a/src/pages/MyStock/index.css
+++ b/src/pages/MyStock/index.css
@@ -1,7 +1,7 @@
 /* 分割线 */
 .separate-line {
     height: 1px;
-    margin: 20px 0 30px 0;
+    /* margin: 20px 0 30px 0; */
     box-sizing: border-box;
     border-top: 1px solid #cacbd6;
   }
@@ -11,12 +11,15 @@
     width: 90%;
     margin-left: 50px;
     margin-top:20px;
+    background-color: #293849;
+    border-radius: 4px;
+    box-shadow: 0 0 2px 1px #000000;
 }
 
 .title-tip {
-    text-align: left;
-    margin-bottom: 20px;
-    font-family: "Lucida Calligraphy", cursive, serif, sans-serif;
+    text-align: center;
+    padding-top: 20px;
+    font-family:  Courier, "Courier New", monospace;
     color: #fcfdfd;
     font-size: 20px;
     font-weight: bold;
