--- a/src/container/Header/index.css
+++ b/src/container/Header/index.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   height: 40px;
+  line-height: 40px;
   padding: 0 30px 0 30px;
   font-size: 20px;
   color: #ffffff;
