--- a/src/pages/MyStock/index.css
+++ b/src/pages/MyStock/index.css
@@ -1,31 +1,39 @@
 /* 分割线 */
-.separate-line {
-    height: 1px;
-    /* margin: 20px 0 30px 0; */
-    box-sizing: border-box;
-    border-top: 1px solid #cacbd6;
-  }
-
-.myStock-container{
-    height: 90%;
-    width: 90%;
-    margin-left: 50px;
-    margin-top:20px;
-    background-color: #293849;
-    border-radius: 4px;
-    box-shadow: 0 0 2px 1px #000000;
+.separate-line-stock {
+  height: 1px;
+  /* margin: 20px 0 30px 0; */
+  box-sizing: border-box;
+  border-top: 1px solid #cacbd6;
+  margin-bottom: 20px;
 }
 
-.title-tip {
-    text-align: center;
-    padding-top: 20px;
-    font-family:  Courier, "Courier New", monospace;
-    color: #fcfdfd;
-    font-size: 20px;
-    font-weight: bold;
-  }
+.myStock-container {
+  height: 90%;
+  width: 95%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  margin-top: 40px;
+  background-color: #293849;
+  border-radius: 20px;
+  padding: 0 20px 20px 20px;
+  margin-bottom: 100px;
+}
 
-  .pagination-wrapper {
-    text-align: right;
-    margin-top: 20px;
-  }
+.title-stock {
+  text-align: center;
+  padding-top: 20px;
+  font-family: Courier, "Courier New", monospace;
+  color: #fcfdfd;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.pagination-wrapper-stock {
+  text-align: right;
+  margin-top: 20px;
+}
+
+.ant-table-thead > tr > th {
+  font-weight: bold;
+}
